# WireMCP

./: .gitignore  README.md  pyproject.toml
src/wiremcp/: main.py  utils.py
