[project]
name = "wiremcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VaiTon", email = "eyadlorenzo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.11.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.scripts]
wiremcp = "wiremcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
